--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "djangorestframework (>=3.15.2,<4.0.0)",
     "pymysql (>=1.1.1,<2.0.0)",
     "pillow (>=11.1.0,<12.0.0)",
-    "django-cleanup (>=9.0.0,<10.0.0)"
+    "django-cleanup (>=9.0.0,<10.0.0)",
+    "djangorestframework-simplejwt (>=5.4.0,<6.0.0)",
+    "django-extensions (>=3.2.3,<4.0.0)"
 ]
 
 
